[tool.poetry]
name = "pyasic_dash"
version = "0.1.0"
description = ""
authors = ["John-Paul Compagnone <jpcompagnone@epicblockchain.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyasic = "^0.67.2"
nicegui = "^2.9.0"
numpy = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
